--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   </div>
 
   <footer>
-    <p>Designed & Developed by JONGVLSQZ</p>
+    <p>Designed & Developed by Jong Velasquez</p>
   </footer>
 
   <script src="./js/app.js"></script>
