--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   </div>
 
   <footer>
-    <p>Designed & Developed by Jong Velasquez</p>
+    <p>Designed & Developed by <a href="https://github.com/jongvelasquez" target="_blank">Jong Velasquez</a></p>
   </footer>
 
   <script src="./js/app.js"></script>
