restructure html for double prices and single price, removed two-columns and three-colums class, add double-price class for two column price and fix mobile responsive

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         </ul>
       </div>
       <div class="tabs__body">
+
+        <!-- Dinner -->
         <div class="menu dinner active" data-id="tab1">
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Bruschetta Pomodoro</h3>
               <p class="menu__description">toasted semolina bread topped with diced tomato, basil, garlic & red
@@ -36,7 +38,7 @@
               <p class="menu__price">$7.95</p>
             </div>
           </div>
-          <div class="menu__list three-columns">
+          <div class="menu__list double-price">
             <div class="menu__column">
               <h3 class="menu__title">Fried Zucchini</h3>
               <p class="menu__description">toasted semolina bread topped with diced tomato, basil, garlic & red
@@ -44,28 +46,33 @@
               </p>
             </div>
             <div class="menu__column">
-              <p class="menu__price">$7.95 <span>Glass</span></p>
-            </div>
-            <div class="menu__column">
-              <p class="menu__price">$7.95 <span>Bottle</span></p>
+              <div>
+                <p class="menu__price">$7.95 <span>Glass</span></p>
+              </div>
+              <div>
+                <p class="menu__price">$7.95 <span>Bottle</span></p>
+              </div>
             </div>
           </div>
-          <div class="menu__list three-columns">
+          <div class="menu__list double-price">
             <div class="menu__column">
               <h3 class="menu__title">Calamari Arrabbiata (Serves 2)</h3>
               <p class="menu__description">Fried calamari w/ mixed peppers in a spicy marinara sauce</p>
             </div>
             <div class="menu__column">
-              <p class="menu__price">$7.95</p>
-            </div>
-            <div class="menu__column">
-              <p class="menu__price">$15.95</p>
+              <div>
+                <p class="menu__price">$7.95</p>
+              </div>
+              <div>
+                <p class="menu__price">$15.95</p>
+              </div>
             </div>
           </div>
         </div>
 
+        <!-- Pizza -->
         <div class="menu pizza" data-id="tab1">
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Margheritta</h3>
               <p class="menu__description">Fresh mozzarella & plum tomato sauce, topped with olive oil and basil</p>
@@ -74,7 +81,7 @@
               <p class="menu__price">$11.95</p>
             </div>
           </div>
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Arugula & Prosciutto</h3>
               <p class="menu__description">Fresh mozzarella & plum tomato, topped with arugula and prosciutto</p>
@@ -83,7 +90,7 @@
               <p class="menu__price">$15.95</p>
             </div>
           </div>
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Four Seasons</h3>
               <p class="menu__description">Fresh mozzarella & plum tomato sauce topped with olives, mushrooms,
@@ -95,16 +102,19 @@
           </div>
         </div>
 
+        <!-- Wines -->
         <div class="menu wines" data-id="tab2">
-          <div class="menu__list two-columns">
+          <div class="menu__list ">
             <div class="menu__column">
               <h3 class="menu__title">Pinot Grigio Della Vicolo Delle Venezie (Italy)</h3>
             </div>
             <div class="menu__column">
-              <p class="menu__price">$12.00 <span>Glass</span> </p>
+              <div>
+                <p class="menu__price">$12.00 <span>Glass</span> </p>
+              </div>
             </div>
           </div>
-          <div class="menu__list two-columns">
+          <div class="menu__list ">
             <div class="menu__column">
               <h3 class="menu__title">Pinot Grigio Cavit (Italy)</h3>
             </div>
@@ -112,21 +122,24 @@
               <p class="menu__price">$32.00 <span>Bottle</span> </p>
             </div>
           </div>
-          <div class="menu__list three-columns">
+          <div class="menu__list double-price">
             <div class="menu__column">
               <h3 class="menu__title">Pinot Grigio Fontana Candida Delle Venezie (Italy)</h3>
             </div>
             <div class="menu__column">
-              <p class="menu__price">$13.00 <span>Glass</span> </p>
-            </div>
-            <div class="menu__column">
-              <p class="menu__price">$34.00 <span>Bottle</span> </p>
+              <div>
+                <p class="menu__price">$13.00 <span>Glass</span> </p>
+              </div>
+              <div>
+                <p class="menu__price">$34.00 <span>Bottle</span> </p>
+              </div>
             </div>
           </div>
         </div>
 
+        <!-- Beverages -->
         <div class="menu beverages" data-id="tab3">
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Coke</h3>
               <p class="menu__description">20 oz.Soda</p>
@@ -135,7 +148,7 @@
               <p class="menu__price">$2.50</p>
             </div>
           </div>
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Diet Coke</h3>
               <p class="menu__description">20 oz.Soda</p>
@@ -144,7 +157,7 @@
               <p class="menu__price">$2.50</p>
             </div>
           </div>
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Coke</h3>
               <p class="menu__description">2 Liter Soda</p>
@@ -155,8 +168,9 @@
           </div>
         </div>
 
+        <!-- Desserts -->
         <div class="menu desserts" data-id="tab4">
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Cannoli</h3>
             </div>
@@ -164,7 +178,7 @@
               <p class="menu__price">$6.95</p>
             </div>
           </div>
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Tartufo</h3>
             </div>
@@ -172,7 +186,7 @@
               <p class="menu__price">$8.95</p>
             </div>
           </div>
-          <div class="menu__list two-columns">
+          <div class="menu__list">
             <div class="menu__column">
               <h3 class="menu__title">Napoline</h3>
             </div>
@@ -181,6 +195,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </section>
 
