--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./img/favicon.png" />
   <link rel="stylesheet" href="./css/style.css">
-  <title>JavaScript Restaurant Menus - by JONGVLSQZ</title>
+  <title>JavaScript Restaurant Tab Menus | Jong Velasquez</title>
 </head>
 
 <body>
 
   <div class="container">
-    <h1 class="header-lg">🍔 JavaScript Restaurant Menus 🍔</h1>
+    <h1 class="header-lg">JavaScript Restaurant Tab Menus</h1>
     <section class="tabs">
       <div class="tabs__head">
         <ul class="tabs__nav">
